# cache-hit

./: .gitignore  CLAUDE.md  FRONTEND_SPEC.md  MOCHI_INTEGRATION_SPEC.md  README.md  docker-compose.yml  validate-ci.sh
.claude/: settings.json
.claude/hooks/: format.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  test.yml
backend/: Dockerfile  Dockerfile.python  Dockerfile.python-numpy  SPEC.md  container_manager.py  deck_parser.py  deck_router.py  execution_router.py  fsrs_scheduler.py  main.py  mochi_client.py  pyproject.toml  review_router.py  review_storage.py  sync.py  test_api.py
backend/review_cache/: due_cards_cache.json
backend/tests/: conftest.py  test_container_manager.py  test_deck_router.py  test_main.py  test_reset_reviews.py  test_review_router.py  test_sync.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BackendStatus.jsx  DeckSelector.jsx  Editor.jsx  Editor.test.jsx  EditorOutputPane.jsx  Footer.jsx  Footer.test.jsx  OutputPanel.jsx  OutputPanel.test.jsx  QuestionPane.jsx  QuestionPane.test.jsx  RatingButtons.jsx  RatingButtons.test.jsx  RatingButtonsEnhanced.jsx  RatingButtonsEnhanced.test.jsx  ReviewComplete.jsx  ReviewComplete.test.jsx  RunButton.jsx  RunButton.test.jsx  Sidebar.jsx  SplitPane.jsx  SplitPane.test.jsx
frontend/src/hooks/: useAnswerVisibility.js  useBackendHealth.js  (+11 more)
stitch-imports/: index.html  index2.html  index3.html  new_index.html
(+6 files in other folders)
