[project]
name = "cachehit"
version = "0.1.0"
description = "CacheHit - Spaced repetition code review application"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.0",
    "fsrs>=6.3.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.7",
]

[tool.ruff]
lint.extend-select = ["I"]
